--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Simon Says...</h1>
+
+    <p id="numbers"></p>
+
+    <p id="correct"></p>
+
+    <p id="numbers_correct"></p>
+
+    <div id="countdown"></div>
+
 
     <script src="js/script.js"></script>
 </body>
